ubiquity (1.11.16) jaunty; urgency=low

  [ Evan Dandrea ]
  * Incorporate the final time zone map artwork.  Support some
    additional time zones on the map.

  [ Colin Watson ]
  * KDE frontend:
    - grub_device_entry is now a combobox, so we need to use currentText()
      rather than text() (LP: #337181).
  * GTK frontend:
    - Fix suggested keymap handling so that selecting that option after
      selecting a custom keymap applies the suggested keymap (LP: #337998).
  * Add a fudge of 20% to the size of each tree on the live filesystem
    (other than / and /boot, which already have their own fudge factors) for
    the purposes of the partition-too-small check (LP: #298318).
  * Automatic update of included source packages: choose-mirror 2.27ubuntu4,
    clock-setup 0.97ubuntu3, partman-partitioning 64ubuntu5.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 10 Mar 2009 10:19:54 +0000

ubiquity (1.11.15) jaunty; urgency=low

  [ Colin Watson ]
  * Expand ubiquity/text/password_extra_label to explain what makes a good
    password (text mostly borrowed from user-setup).
  * Cope with renaming of passwd/allow-password-empty to
    user-setup/allow-password-empty in user-setup 1.23ubuntu14.
  * Remove obsolete ubiquity/text/timezone_country_label and
    ubiquity/text/timezone_time_label templates.
  
  [ Roman Shtylman ]
  * moved common pixmaps to artwork package

  [ Evan Dandrea ]
  * Always return an integer from get_size as the calcuation could produce a
    float, and functions using the return value expect a number of bytes
    (LP: #334677).
  * Use better descriptions on the finished dialog and show an information
    icon to be consistent with other dialogs.  Thanks Matthew Paul Thomas
    (LP: #258017).
  * Properly update the step number when pressing back to get to the language
    selection page (LP: #336740).
  * Automatic update of included source packages: apt-setup
    1:0.37ubuntu10, console-setup 1.28ubuntu6, debian-installer-utils