@@ -36,7 +36,7 @@
           </packing>
         </child>
         <child>
-          <widget class="WrapLabel" id="timezone_comment_label">
+          <widget class="GtkLabel" id="timezone_comment_label">
             <property name="width_request">600</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
@@ -57,10 +57,9 @@
             <property name="orientation">vertical</property>
             <property name="spacing">6</property>
             <child>
-              <widget class="GtkFrame" id="frame2">
+              <widget class="GtkAspectFrame" id="timezone_aspect">
                 <property name="visible">True</property>
                 <property name="label_xalign">0</property>
-                <property name="label_yalign">0</property>
                 <property name="shadow_type">in</property>
                 <child>
                   <widget class="GtkEventBox" id="timezone_map_window">
@@ -70,12 +69,6 @@
                       <placeholder/>
                     </child>
                   </widget>
-                </child>
-                <child>
-                  <placeholder/>
-                  <packing>
-                    <property name="type">label_item</property>
-                  </packing>
                 </child>
               </widget>
               <packing>
